# ball_models

./: CMakeLists.txt  README.md  package.xml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: cpp_format.yml  python_black.yml  python_flake8.yml  python_mypy.yml  todo_check.yml
config/: config.toml  physics.toml  prediction.toml
include/ball_models/: ball_trajectory.hpp  racket_contact_model.hpp  table_contact_model.hpp
include/ball_models/toml/: toml.hpp
python/ball_models/: __init__.py  parser.py  sim.py  simulation.py
src/: ball_trajectory.cpp  racket_contact_model.cpp  table_contact_model.cpp
srcpy/: wrappers.cpp
tests/: ball_trajectory_numpy.py  ball_trajectory_symbolic.py  test_compare_cpp_python.py  test_cpp_functions.py  test_simulation.cpp  test_simulation.py
