<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  
  <name>ball_models</name>
  <version>1.0.0</version>
  <description>providing ball simulation models</description>
  <author email="alexander.dittrich@tuebingen.mpg.de">Alexander Dittrich</author>
  <maintainer email="alexander.dittrich@tuebingen.mpg.de">Alexander Dittrich</maintainer>
  <license>BSD 3-Clause</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pybind11</depend>
  <depend>mpi_cmake_modules</depend>


  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>
